Bug 479351 - It is not possible to add Sub-ToDos in Kontact ToDo-List
Summary: It is not possible to add Sub-ToDos in Kontact ToDo-List
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: todoview (other bugs)
Version First Reported In: GIT (master)
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2024-01-03 10:12 UTC by Robby Engelmann
Modified: 2024-02-22 20:00 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robby Engelmann 2024-01-03 10:12:41 UTC
SUMMARY
It is not possible to add Sub-ToDos in Kontact ToDo-List. Menu item is grayed oit

Operating System: openSUSE Tumbleweed 20231228
KDE Plasma Version: 5.91.90
KDE Frameworks Version: 5.248.0
Qt Version: 6.6.1
Kernel Version: 6.6.7-1-default (64-bit)
Graphics Platform: Wayland
Processors: 20 × 13th Gen Intel® Core™ i7-13700H
Memory: 62.5 GiB of RAM
Graphics Processor: Mesa Intel® Graphics
Manufacturer: TUXEDO
Product Name: TUXEDO InfinityBook Pro Gen8 (MK1)
Comment 1 Robby Engelmann 2024-01-17 11:32:33 UTC
still valid in master:
Operating System: openSUSE Tumbleweed 20240115
KDE Plasma Version: 6.0.80
KDE Frameworks Version: 5.249.0
Qt Version: 6.6.1
Kernel Version: 6.6.11-1-default (64-bit)
Graphics Platform: Wayland
Processors: 20 × 13th Gen Intel® Core™ i7-13700H
Memory: 62.5 GiB of RAM
Graphics Processor: Mesa Intel® Graphics
Manufacturer: TUXEDO
Product Name: TUXEDO InfinityBook Pro Gen8 (MK1)
Comment 2 Bug Janitor Service 2024-02-07 10:26:29 UTC
A possibly relevant merge request was started @ https://invent.kde.org/pim/eventviews/-/merge_requests/96
Comment 3 Daniel Vrátil 2024-02-07 10:38:49 UTC
Git commit 9388c7ec7de461550f4e5439b6802ea6d2bd37b5 by Daniel Vrátil.
Committed on 07/02/2024 at 10:25.
Pushed by dvratil into branch 'release/24.02'.

Fix 'Create sub-todo' action being always disabled

Regression introduced while porting away from ETMCalendar.

M  +1    -1    src/todo/todoview.cpp

https://invent.kde.org/pim/eventviews/-/commit/9388c7ec7de461550f4e5439b6802ea6d2bd37b5
Comment 4 Robby Engelmann 2024-02-09 08:48:03 UTC
Still the menu point to add Sub-To Dos is gray here.

The merge should be integrate into the last night build of git master in openSUSE unstable KDE repos (I think at least).
Comment 5 Daniel Vrátil 2024-02-19 08:34:28 UTC
Git commit d82df2006bc0c9dd5cca424d6c527a57fa3231e1 by Daniel Vrátil.
Committed on 19/02/2024 at 08:34.
Pushed by dvratil into branch 'master'.

Fix 'Create sub-todo' action being always disabled

Regression introduced while porting away from ETMCalendar.
(cherry picked from commit 9388c7ec7de461550f4e5439b6802ea6d2bd37b5)

M  +1    -1    src/todo/todoview.cpp

https://invent.kde.org/pim/eventviews/-/commit/d82df2006bc0c9dd5cca424d6c527a57fa3231e1
Comment 6 Daniel Vrátil 2024-02-19 08:35:02 UTC
My bad, I forgot to add the change to master (only committed to the release/24.02 branch).
Comment 7 Robby Engelmann 2024-02-22 20:00:03 UTC
appears to work here, thanks!