Fix 'Create sub-todo' action being always disabled

Regression introduced while porting away from ETMCalendar.

BUG: 479351